update: map layesr and plotly data gathering and changing the dataOne source

--- a/Analysis_Mahsa.ipynb
+++ b/Analysis_Mahsa.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "d1bf3dd1",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "1720dd10",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "2da9a526",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "3  My older brother and twin sister were leaving ...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "c522ad85",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "b998527b",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "d54b7f9c",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "95fefde8",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "60bd2c4c",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "3  My older brother and twin sister were leaving ...  1956-10-10  21:00:00  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "id": "609b4e50",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "cb354a47",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "b9136913",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "id": "af6960c8",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "46946  San Francisco man&#44 then 22&#44 reported det...  1963-06-01  00:00:00  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "5dae0d57",
    "metadata": {},
    "outputs": [],
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "3fbcaf1e",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "id": "3f5e408a",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
        " datetime.date(2013, 10, 3)]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "id": "8c114236",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "id": "755e8e95",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "47247      2 ufo&#39s over Dryden&#44Ont&#44late 70&#39s  1978-06-01  22:30:00  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 18,
+   "id": "0dbd1e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['disk', 'light', 'circle', 'cigar', 'sphere', 'other', 'egg',\n",
+       "       'oval', 'fireball', 'triangle', 'unknown'], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observ_one['shape'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "7d103be9",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "id": "ef73b215",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "id": "ffa693af",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1467,7 @@
        "49186  We witnessed 4 swirling balls of light that me...  2000-06-15  23:45:00  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1478,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 22,
+   "id": "f22b11bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['triangle', 'unknown', 'other', 'disk', 'oval', 'light', 'circle'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observ_two['shape'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "5ffca4a0",
    "metadata": {},
    "outputs": [],
@@ -1468,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 24,
    "id": "74b2b94e",
    "metadata": {},
    "outputs": [],
@@ -1478,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 25,
    "id": "1f73f8be",
    "metadata": {},
    "outputs": [
@@ -1909,7 +1953,7 @@
        "12318  Triangle shaped&#44 no lights&#44 clear&#44 li...  2003-11-22  23:30:00  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1920,7 +1964,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 26,
+   "id": "06fee83e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['disk', 'light', 'circle', 'triangle', 'other', 'unknown',\n",
+       "       'changing'], dtype=object)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observ_three['shape'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "d2d01ee3",
    "metadata": {},
    "outputs": [],
@@ -1932,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "id": "64181a74",
    "metadata": {},
    "outputs": [],
@@ -1942,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 29,
    "id": "4d0b67f5",
    "metadata": {},
    "outputs": [
@@ -2231,7 +2297,7 @@
        "39733  moving very slow. heading south towards willow...  2007-04-29  23:00:00  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2308,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 30,
+   "id": "a8fc54cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['oval', 'cylinder', 'circle', 'unknown', 'disk', 'triangle',\n",
+       "       'formation', 'rectangle', 'light', 'other'], dtype=object)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observ_four['shape'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "d750af2c",
    "metadata": {},
    "outputs": [],
@@ -2254,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 32,
    "id": "b4812774",
    "metadata": {},
    "outputs": [],
@@ -2264,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 33,
    "id": "6cbcce52",
    "metadata": {},
    "outputs": [
@@ -2659,7 +2747,7 @@
        "6220                    2 fireball objects over philly.  2013-10-03  23:00:00  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2670,7 +2758,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 34,
+   "id": "bae3fb72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['triangle', 'light', 'flash', 'circle', 'rectangle', 'other',\n",
+       "       'fireball', 'oval'], dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observ_five['shape'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "ee6a4f85",
    "metadata": {},
    "outputs": [],
@@ -2679,14 +2789,6 @@
     "with open(\"./Resources/dateFive.json\", \"w\") as outfile:\n",
     "    outfile.write(five)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b61f0ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
